--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,12 @@ footer {
 	font-style: italic;
 	font-size: 90%;
 }
+mark.green {
+    color:#00ff00;
+    background: none;
+}
+
+mark.blue {
+    color:#0000ff;
+    background: none;
+}
